<resources>
    <string name="app_name">new</string>
    <string name="app_description">TO buy all the item that you want</string>
    <string name="locationURL">http://ec2-13-234-45-216.ap-south-1.compute.amazonaws.com:6868/get_location_ids</string>
    <string name="retailerURL">http://ec2-13-234-45-216.ap-south-1.compute.amazonaws.com:6868/get_retailers_near_me</string>
    <string name="photoURL">"http://ec2-13-234-45-216.ap-south-1.compute.amazonaws.com/rt"</string>


 <!-- <string name="default_web_client_id">271506978165-imamffilo67uv1k3rgtm9f5ok9sbmble.apps.googleusercontent.com</string> -->

    <!--    XML String  -->
    <string name="createAnAccountStr">Create an account with the new phone number</string>
    <string name="emailAddressStr">Email</string>
    <string name="nameStr">NAME</string>
    <string name="passwordStr">PASSWORD</string>
    <string name="mobileNoStr">10 digit mobile number</string>
    <string name="maleStr">Male</string>
    <string name="femaleStr">Female</string>
    <string name="ageStr">AGE</string>
    <string name="signUpStr">SIGN UP</string>
    <string name="loginStr">LOGIN</string>
    <string name="retry">RETRY</string>
    <string name="forgetPassword">Forgot your Password?</string>
    <string name="doNoAccount">Sign Up</string>

    <!--    ERROR   -->
    <string name="ageIsReq">Age is required</string>
    <string name="emailIsReq">Email is required</string>
    <string name="passwordIsReq">Password is required</string>
    <string name="errorInvalidEmail">This email address is invalid</string>
    <string name="errorInvalidPass">This password is too short</string>
    <string name="errorInvalidMob">This mobile number is not valid</string>
    <string name="errorInvalidAge">Invalid age</string>
    <string name="errorFeildReq">This field is required</string>
    <string name="errorGender">Select Your Gender</string>
    <string name="errorAuth">Authentication Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
